# crewai_numspot

./: README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/numspot/: crew.py  main.py
