[project]
name = "numspot"
version = "0.1.0"
description = "numspot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
numspot = "numspot.main:run"
run_crew = "numspot.main:run"
train = "numspot.main:train"
replay = "numspot.main:replay"
test = "numspot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
